--- a/SEA_Application/Views/AspNetNotes/PendingOrdersDetails.cshtml
+++ b/SEA_Application/Views/AspNetNotes/PendingOrdersDetails.cshtml
@@ -168,7 +168,7 @@
             <div class="ticket" id="ticket">
               
                 <center>
-                    <h2 style="float:left">Officers Academy</h2> <img style="width:50px;float:right" src="~/Content/assets/assets/img/orignal.png" alt="Alternate Text" />
+                    <img style="width:150px;" src="~/Content/assets/assets/img/orignal.png" alt="Alternate Text" />
                     @*<img src="~/Content/print-receipt-thermal-printer-master/print-receipt-thermal-printer-master/logo.PNG" />*@
                 </center>
 
@@ -177,11 +177,11 @@
                 </div>
                 <p class="centered">
                     @*Officers Academy*@
-                  <span id="OrderNo"></span>
-                    <br><span id="DateTime"></span>
+                    <b> <span id="OrderNo"></span></b>
+                    <br>  <b> <span id="DateTime"></span></b>
                 </p>
 
-                <br><b>Cashier:</b> SeaAdmin <span>
+                <br><b>Cashier:</b><b> SeaAdmin</b> <span>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Admin Copy</b>
                 </span>
@@ -202,8 +202,8 @@
                     <tbody id="billbody" style="border: 1px solid black"></tbody>
                 </table>
                 <p class="centered">
-                    Website: https://officersacademy.pk/
-                    <br>Facebook Page: https://www.facebook.com/officersacademylahore
+                    <b style="font-weight:bold">  Website: https://officersacademy.pk/</b>
+                    <b style="font-weight:bold"> <br>Facebook Page: https://www.facebook.com/officersacademylahore</b>
                 </p>
             </div>
 
@@ -217,7 +217,7 @@
                 <center>
 
                     @*<img src="~/Content/print-receipt-thermal-printer-master/print-receipt-thermal-printer-master/logo.PNG" />*@
-                    <h2 style="float:left">Officers Academy</h2> <img style="width:50px;float:right" src="~/Content/assets/assets/img/orignal.png" alt="Alternate Text" />
+                    <img style="width:150px;" src="~/Content/assets/assets/img/orignal.png" alt="Alternate Text" />
                 </center>
                 <div style="clear:both">
 
@@ -225,12 +225,12 @@
 
                 <p class="centered">
 
-                  <span id="OrderNo1"></span>
-                    <br><span id="DateTime1"></span>
+                    <b>  <span id="OrderNo1"></span></b>
+                    <br>   <b> <span id="DateTime1"></span></b>
                 </p>
 
 
-                <br><b>Cashier:</b> SeaAdmin <span>
+                <br><b>Cashier:</b> <b> SeaAdmin</b> <span>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Student Copy</b>
                 </span>
@@ -251,8 +251,8 @@
                     <tbody id="billbody1" style="border: 1px solid black"></tbody>
                 </table>
                 <p class="centered">
-                    Website: https://officersacademy.pk/
-                    <br>Facebook Page: https://www.facebook.com/officersacademylahore
+                    <b style="font-weight:bold">  Website: https://officersacademy.pk/</b>
+                    <b style="font-weight:bold"> <br>Facebook Page: https://www.facebook.com/officersacademylahore</b>
                 </p>
             </div>
 
