--- a/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
@@ -146,6 +146,17 @@
                             <p>Student Fee</p>
                         </a>
                     </li>
+
+                    <li class="nav-item">
+                        <a href="@Url.Action("FeeTransactions", "GrandTotal" )" class="nav-link nav-toggle">
+                            <i class="sea-dash">
+                                <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/icon-teacher.png" alt="">
+                            </i>
+                            <p>Fee Transactions</p>
+                        </a>
+                    </li>
+
+
                     <li class="nav-item">
 
                         <a href="@Url.Action("ChartsOf_Accounts", "ChartOfAccounts")" class="nav-link nav-toggle">
@@ -246,6 +257,15 @@
                             <p>Notes</p>
                         </a>
                     </li>
+
+                    <li class="nav-item">
+
+                        <a href="@Url.Action("Dashboard", "PhotoCopier_Dashboard" )" class="nav-link nav-toggle">
+                            <i class="fal fa-books"></i>
+                            <p>PhotoCopier Summary</p>
+                        </a>
+                    </li>
+
 
                     <li class="nav-item">
 
