--- a/SEA_Application/Views/GrandTotal/StudentFee.cshtml
+++ b/SEA_Application/Views/GrandTotal/StudentFee.cshtml
@@ -12,7 +12,7 @@ else if (User.IsInRole("Staff"))
 {
     Layout = "~/Views/Shared/_StaffDashboardLayout.cshtml";
 }
- else if (User.IsInRole("Receptionist"))
+else if (User.IsInRole("Receptionist"))
 {
     Layout = "~/Views/Shared/_ReceptionistDashboardLayout.cshtml";
 
@@ -106,12 +106,10 @@ else if (User.IsInRole("Staff"))
     }
 
     #bill {
-      
         display: none;
     }
 
     #bill1 {
-      
         display: none;
     }
 
@@ -424,21 +422,21 @@ else if (User.IsInRole("Staff"))
 
                         <br />
                         <br />
-                        <div id="bill"   >
+                        <div id="bill">
 
                             <div class="ticket" id="ticket">
 
                                 <center>
-                                     <img style="width:150px;" src="~/Content/assets/assets/img/orignal.png" alt="Alternate Text" />
+                                    <img style="width:150px;" src="~/Content/assets/assets/img/orignal.png" alt="Alternate Text" />
                                     @*<img src="~/Content/print-receipt-thermal-printer-master/print-receipt-thermal-printer-master/logo.PNG" />*@
                                 </center>
 
                                 @*<div style="clear:both">
 
-                                </div>*@
-                                
+                                    </div>*@
+
                                 <p class="centered">
-                                
+
                                     <b><span id="Recipt">Recipt#<span id="challanNo"></span> </span></b>
                                     <br><b><span id="DateTime"></span></b>
                                 </p>
@@ -472,23 +470,23 @@ else if (User.IsInRole("Staff"))
 
 
                         <!--slip 2-->
-                        <div id="bill1" style="" >
+                        <div id="bill1" style="">
 
                             <div class="ticket" id="ticket">
 
                                 <center>
-                                   <img style="width:150px;" src="~/Content/assets/assets/img/orignal.png" alt="Alternate Text" />
+                                    <img style="width:150px;" src="~/Content/assets/assets/img/orignal.png" alt="Alternate Text" />
                                     @*<img src="~/Content/print-receipt-thermal-printer-master/print-receipt-thermal-printer-master/logo.PNG" />*@
                                 </center>
 
                                 @*<div style="clear:both">
 
-                                </div>*@
+                                    </div>*@
 
 
                                 <p class="centered">
-                                  
-                                 <b>  <span id="Recipt1">Recipt#<span id="challanNo1"></span> </span></b>
+
+                                    <b>  <span id="Recipt1">Recipt#<span id="challanNo1"></span> </span></b>
                                     <br><b><span id="DateTime1"></span></b>
                                 </p>
 
@@ -564,6 +562,9 @@ else if (User.IsInRole("Staff"))
                                                 Roll No
                                             </th>
                                             <th>
+                                                Phone No 
+                                            </th>
+                                            <th>
                                                 Session Name
                                             </th>
                                             <th>
@@ -612,7 +613,7 @@ else if (User.IsInRole("Staff"))
         if (day < 10) day = "0" + day;
 
         var today = year + "-" + month + "-" + day;
-       // document.getElementById("theDate").value = today;
+        // document.getElementById("theDate").value = today;
 
         $("#IssueDate").val(today);
 
@@ -629,6 +630,12 @@ else if (User.IsInRole("Staff"))
                 },
                 {
                     text: '<span class="datatableButtonsDownload"> <img src="/Content/assets/assets/icons/Icon-download.png" alt=""> Download</span>'
+                },
+                {
+                     
+                    extend: 'print',
+                    text: 'Print',
+                     title: 'Defaulter Students',
                 }
             ],
             "language": {
@@ -812,27 +819,27 @@ else if (User.IsInRole("Staff"))
 
         $("#ChallanForm").click(function () {
 
-            var DueDate = document.getElementById("DueDate").value; 
+            var DueDate = document.getElementById("DueDate").value;
 
 
-                var due = new Date(DueDate);
-                var day = due.getDate();
-                var month = due.getMonth() + 1;
-                var year = due.getFullYear();
+            var due = new Date(DueDate);
+            var day = due.getDate();
+            var month = due.getMonth() + 1;
+            var year = due.getFullYear();
 
-                var monthName = GetMonthName(month);
+            var monthName = GetMonthName(month);
 
-                 DueDate = day + "/" + month + "/" + year;
+            DueDate = day + "/" + month + "/" + year;
 
-            var IssueDate = document.getElementById("IssueDate").value;  
+            var IssueDate = document.getElementById("IssueDate").value;
 
-                var Issue = new Date(IssueDate);
-                var Issueday = Issue.getDate();
-                var Issuemonth = Issue.getMonth() + 1;
-                var Issueyear = Issue.getFullYear();
+            var Issue = new Date(IssueDate);
+            var Issueday = Issue.getDate();
+            var Issuemonth = Issue.getMonth() + 1;
+            var Issueyear = Issue.getFullYear();
 
-              
-                 IssueDate = Issueday + "/" + Issuemonth + "/" + Issueyear;
+
+            IssueDate = Issueday + "/" + Issuemonth + "/" + Issueyear;
 
             $('#billbody').html("");
             $('#billbody1').html("");
@@ -993,7 +1000,10 @@ else if (User.IsInRole("Staff"))
                     table.fnClearTable();
 
 
+
                     $.each(data, function (index) {
+
+                        //alert(data[index].PhoneNumber);
                         debugger
                         var value = new Date(parseInt(data[index].DueDate.replace(/(^.*\()|([+-].*$)/g, '')));
                         var dat = value.getMonth() +
@@ -1002,7 +1012,7 @@ else if (User.IsInRole("Staff"))
                             value.getDate() +
                             "/" +
                             value.getFullYear();
-                        table.fnAddData([data[index].Name, data[index].UserName, data[index].ClassName, data[index].CourseType, data[index].FeePayable, dat]);
+                        table.fnAddData([data[index].Name, data[index].UserName,data[index].PhoneNumber, data[index].ClassName, data[index].CourseType, data[index].FeePayable, dat]);
 
                     })
 
@@ -1040,7 +1050,7 @@ else if (User.IsInRole("Staff"))
                                 "/" +
                                 value.getFullYear();
 
-                            table.fnAddData([data[index].Name, data[index].UserName, data[index].ClassName, data[index].CourseType, data[index].FeePayable, dat]);
+                            table.fnAddData([data[index].Name, data[index].UserName, data[index].PhoneNumber, data[index].ClassName, data[index].CourseType, data[index].FeePayable, dat]);
 
                         })
 
@@ -1057,7 +1067,7 @@ else if (User.IsInRole("Staff"))
 
     })//end of document ready
 
-          function GetMonthName(monthNumber) {
+    function GetMonthName(monthNumber) {
         var months = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'];
         return months[monthNumber - 1];
     }
