--- a/SEA_Application/Views/AspNetNotes/Index.cshtml
+++ b/SEA_Application/Views/AspNetNotes/Index.cshtml
@@ -494,7 +494,7 @@ else if (User.IsInRole("Receptionist"))
                             <thead>
 
                                 <tr>
-                                    <th style="display:none">NoteOrderId</th>
+                                    <th >Receipt No </th>
                                     <th>Student</th>
                                     <th>Class </th>
                                     <th>Status </th>
@@ -1328,7 +1328,7 @@ else if (User.IsInRole("Receptionist"))
                 var GrandTotalDiscountedOAPrice = 0;
                 $.each(data, function (index) {
                     debugger
-                    $("#SaleReport").append("<tr> <td style='display:none'></td><td>" + data[index].StudentName + "</td> <td>" + data[index].ClassName + "</td><td>" + data[index].Status + "</td><td>" + data[index].TotalPhotoCopier + "</td><td>" + data[index].TotalOA + "</td><td>" + data[index].Total + "</td><td> -" + data[index].Discount + "</td><td>" + data[index].TotalDiscounted + "</td><td class='detailscolumn'><center> <input type='button' class='btn btn-primary btn-sm white' value='Details' id='" + data[index].OrderId + "' ></center></td></tr>")
+                    $("#SaleReport").append("<tr> <td >" + data[index].OrderId + "</td><td>" + data[index].StudentName + "</td> <td>" + data[index].ClassName + "</td><td>" + data[index].Status + "</td><td>" + data[index].TotalPhotoCopier + "</td><td>" + data[index].TotalOA + "</td><td>" + data[index].Total + "</td><td> -" + data[index].Discount + "</td><td>" + data[index].TotalDiscounted + "</td><td class='detailscolumn'><center> <input type='button' class='btn btn-primary btn-sm white' value='Details' id='" + data[index].OrderId + "' ></center></td></tr>")
 
                     //"<center> <input type='button' class='btn btn-primary btn-sm white' value='Details' id='" + data[index].OrderID + "' ></center>"
                     GrandTotalPhotoCopier = GrandTotalPhotoCopier + data[index].TotalPhotoCopier;
@@ -1342,7 +1342,7 @@ else if (User.IsInRole("Receptionist"))
                 })
 
                 // $("#SaleReport").append("<tr> <td style='display:none'></td><td>Grand Total</td> <td></td>  <td></td> <td>" + GrandTotalPhotoCopier + "</td><td>" + GrandTotalOA + "</td><td>" + GrandTotal + "</td><td></td><td>" + GrandTotalDiscounted + "</td><td>" + GrandTotalDiscountedOAPrice + "</td></tr>")
-                $("#SaleReport").append("<tr> <td style='display:none'></td><td>Grand Total</td> <td></td>  <td></td> <td>" + GrandTotalPhotoCopier + "</td><td>" + GrandTotalOA + "</td><td>" + GrandTotal + "</td><td>-" + TotalDiscount + "</td><td>" + GrandTotalDiscounted + "</td></tr>")
+                $("#SaleReport").append("<tr> <td >Grand Total</td><td></td> <td></td>  <td></td> <td>" + GrandTotalPhotoCopier + "</td><td>" + GrandTotalOA + "</td><td>" + GrandTotal + "</td><td>-" + TotalDiscount + "</td><td>" + GrandTotalDiscounted + "</td></tr>")
 
             }
         })
