--- a/SEA_Application/Views/AspNetOrderNotes/Details.cshtml
+++ b/SEA_Application/Views/AspNetOrderNotes/Details.cshtml
@@ -184,6 +184,9 @@
         $("#confirmOrder").click(function () {
 
             var NotesId = $("#Id").val();
+
+
+            alert(NotesId);
             var Quantity = $("#QuantityBtn").val();
             debugger
             $.ajax({
