--- a/SEA_Application/Views/Shared/_StudentDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_StudentDashboardLayout.cshtml
@@ -1756,6 +1756,23 @@
     <script src='~/Content/assets/packages/cal.js'></script>
 
     <script>
+
+           function showNotification(from, align, msg, type) {
+            //type = ['', 'info', 'danger', 'success', 'warning', 'rose', 'primary'];	
+            color = Math.floor((Math.random() * 6) + 1);
+            $.notify({
+                icon: "add_alert",
+                message: msg
+            }, {
+                type: type,
+                timer: 3000,
+                placement: {
+                    from: from,
+                    align: align
+                }
+            });
+        }
+
         function filterGlobal() {
 
             $('#datatable').DataTable().search(
